[project]
name = "pyconde-pydata-conference"
version = "0.3.4"
description = "Public documentation for organizing our volunteer-driven conference."
authors = [
    { name = "Alexander CS Hendorf", email = "alexander@pioneershub.org" }
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "bumpversion>=0.6.0",
    "mkdocs>=1.6.1",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-macros-plugin>=1.3.7",
    "mkdocs-material[imaging]>=9.6.9",
    "mkdocs-open-in-new-tab>=1.0.8",
    "omegaconf>=2.3.0",
    "pymdown-extensions>=10.14.3",
    "pytanis>=0.8",
    "webcolors>=24.11.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/PioneersHub/pyconde25-conference"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["*.md"]

[tool.ruff.lint]
select = [
    "F",  # pyflakes
    "E", "W",  # pycodestyle
    "A",  # flake8-builtins
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PL",  # pylint
    "TID",  # tidy
    "I",  # isort
    "N",  # pep8-naming
    "UP"  # pyupgrade
]
ignore = [
    "E501",  # may cause conflicts with ruff formatter
    "W191"
]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
